# sloria--textblob

./: README.md  acceptance.md  goal.md  progress.md  pyproject.toml  todo.md
src/textblob/: __init__.py  base.py  blob.py  decorators.py  exceptions.py  inflect.py  mixins.py  np_extractors.py  sentiments.py  spelling.py  taggers.py  tokenizers.py  utils.py  wordnet.py
tests/: __init__.py  test_blob.py  test_blobber.py  test_np_extractors.py  test_sentiments.py  test_taggers.py  test_textblob.py  test_tokenizers.py  test_word.py  test_wordlist.py
textblob/: __init__.py  base.py  blob.py  classifiers.py  compat.py  decorators.py  download_corpora.py  exceptions.py  formats.py  inflect.py  mixins.py  np_extractors.py  parsers.py  sentiments.py  spelling.py  taggers.py  tokenizers.py  utils.py  wordnet.py
textblob/en/: __init__.py  sentiment_lexicon.py  word_counts.py
